deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pfc
  namespace: web
spec:
  selector:
    matchLabels:
      app: app-pfc
  template:
    metadata:
      labels:
        app: app-pfc
    spec:
      containers:
      - name: app-pfc
        image: backend-pfc1 #colcar a minha imagem com a minha aplicaçao /// para o banco criar outro deploment, para o banco#
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "250Mi" #No teste de de monolito multiplicar pelo valor de pods no caso 250 * 4
            cpu: "650m" #No teste de de monolito multiplicar pelo valor de pods no caso 250 * 4
          limits:
            memory: "500Mi" #No teste de de monolito multiplicar pelo valor de pods no caso 250 * 4 e colocar um pouco a mais 
            cpu: "1200m" #No teste de de monolito multiplicar pelo valor de pods no caso 250 * 4 e colocar um pouco a mais 
        readinessProbe:
          httpGet:
           path: /helfcheck
           port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /helfcheck
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
