deployment_db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: tcc-bd:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
