service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: web
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
