service_db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: web
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
